fix(Checkbox): adjust alignment of label with control (#2491)
* fix(Checkbox): adjust alignment of label with control

* fix: address pr comments

* fix: address a11y comments

--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -69,10 +69,22 @@
   position: relative;
 }
 
+.checkbox__label {
+  /* slight offset to improve alignment next to checkbox */
+  transform: translateY(-1px);
+}
+
 .checkbox__sub-label {
   display: block;
 
+  /* slight offset to improve alignment next to checkbox */
+  transform: translateY(-1px);
+
   color: light-dark(var(--eds-theme-color-text-utility-default-secondary), var(--eds-dark-theme-color-text-utility-default-secondary));
+
+  &.checkbox--is-disabled {
+    color: light-dark(var(--eds-theme-color-text-utility-disabled-primary), var(--eds-dark-theme-color-text-utility-disabled-primary));
+  }
 }
 
 .checkbox__input:not(:checked):not(:indeterminate) {
